--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,12 +7,11 @@
         "plugin:react/recommended",
         "airbnb",
         "plugin:@typescript-eslint/recommended",
-        "prettier/@typescript-eslint",
         "plugin:prettier/recommended"
     ],
-    "globals":{
-      "Atomics": "readonly",
-      "SharedArrayBuffer": "readonly"
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
     },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -30,7 +29,7 @@
     ],
     "rules": {
       "react-hooks/rules-of-hooks": "error",
-      "react/prop-types": "off",
+      "react/props-types": "off",
       "react/jsx-props-no-spreading": "off",
       "react-hooks/exhaustive-deps": "warn",
       "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
@@ -47,7 +46,7 @@
           "ts": "never",
           "tsx": "never"
         }
-     ]
+      ]
     },
     "settings": {
       "import/resolver": {
